@@ -2,6 +2,7 @@
 package org.example.shared.security;
 
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -10,10 +11,10 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
@@ -27,9 +28,8 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @EnableMethodSecurity
 public class SecurityConfig {
 
-    // Accept both env keys. Use APP_CORS_ALLOWED_ORIGINS first, else CORS_ALLOWED_ORIGINS, else "*".
-    @Value("${app.cors.allowed-origins:${APP_CORS_ALLOWED_ORIGINS:${CORS_ALLOWED_ORIGINS:*}}}")
-    private String allowedOriginsCsv;
+    @Value("${app.cors.allowed-origins:*}") // ENV: APP_CORS_ALLOWED_ORIGINS
+    private String allowedOrigins;
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
@@ -51,8 +51,6 @@ public class SecurityConfig {
                     "/v3/api-docs", "/v3/api-docs/**", "/v3/api-docs.yaml",
                     "/favicon.ico", "/webjars/**", "/actuator/**"
                 ).permitAll()
-                // Realtime token endpoints should be public if they use their own auth inside
-                .requestMatchers("/realtime/**").authenticated()
                 .anyRequest().authenticated()
             )
             .httpBasic(b -> b.disable())
@@ -65,30 +63,37 @@ public class SecurityConfig {
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
-        final var cfg = new CorsConfiguration();
+        CorsConfiguration c = new CorsConfiguration();
 
-        final var trimmed = Arrays.stream(allowedOriginsCsv.split(","))
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .map(s -> s.endsWith("/") ? s.substring(0, s.length() - 1) : s)
-                .toList();
-
-        // Credentials require explicit origins in prod. Fall back to pattern for dev.
-        if (trimmed.size() == 1 && "*".equals(trimmed.get(0))) {
-            cfg.setAllowedOriginPatterns(List.of("*")); // dev only
+        List<String> origins = parseOrigins(allowedOrigins);
+        if (origins.size() == 1 && "*".equals(origins.get(0))) {
+            c.addAllowedOriginPattern("*"); // dev only; avoid in prod with credentials
         } else {
-            cfg.setAllowedOrigins(trimmed);
+            origins.forEach(c::addAllowedOrigin);
         }
 
-        cfg.setAllowCredentials(true);
-        cfg.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(List.of("*"));              // allow all incoming request headers
-        cfg.setExposedHeaders(List.of("ETag","Location","Link","Content-Disposition"));
-        cfg.setMaxAge(Duration.ofHours(1));
+        c.setAllowCredentials(true);
+        c.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+        c.setAllowedHeaders(Arrays.asList("Authorization","Content-Type"));
+        c.setExposedHeaders(Arrays.asList("ETag","Location","Link"));
+        c.setMaxAge(Duration.ofHours(1));
 
-        var source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", c);
         return source;
+    }
+
+    private List<String> parseOrigins(String csv) {
+        String[] parts = csv == null ? new String[0] : csv.split(",");
+        List<String> out = new ArrayList<>(parts.length);
+        for (String raw : parts) {
+            if (raw == null) continue;
+            String o = raw.trim();
+            if (o.endsWith("/")) o = o.substring(0, o.length() - 1);
+            if (!o.isEmpty()) out.add(o);
+        }
+        if (out.isEmpty()) out.add("*");
+        return out;
     }
 
     @Bean
